# A6-Speech

./: .gitignore  A6_Assignment.md  README.md  pyproject.toml  requirements-voice.txt  run.py
lab_note/: extracted_Part1.txt  extracted_Part2.txt  extracted_Part3.txt  extracted_Part3_rest.txt  extracted_notebook.txt
outputs/: ex4_summary.json  target_se.pth
scripts/: setup.ps1
src/a6_speech/: __init__.py  ctc.py  probe.py  tokenizer.py  utils.py  voice_clone.py
